syntax = "proto3";

package shortener_proto;

option go_package = "grpc-url-shortener/pkg;shortener";

import "google/api/annotations.proto";

service LinkShortener {
  rpc CreateShortLink(CreateShortLinkRequest) returns (CreateShortLinkResponse) {
    option (google.api.http) = { 
      post: "/v1/links"
      body: "*"
    }; 
  }
  rpc GetOriginalLink(GetOriginalLinkRequest) returns (GetOriginalLinkResponse) {
    option (google.api.http) = { 
      get: "/v1/links/{short}"
    }; 
  }
}

message CreateShortLinkRequest {
  string original = 1;
}

message CreateShortLinkResponse {
  string short = 1;
}

message GetOriginalLinkRequest {
  string short = 1;
}

message GetOriginalLinkResponse {
  string original = 1;
}
